--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <div class="box">
                 <img src="./img/photo_2022-12-28_10-51-36.jpg" alt="">
                 <p>5000 com</p>
-                <p>categoris</p>
+                <p>super categoris</p>
                 <a href="">Adobe After
                     Effects</a>
                 </div>
