--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class="box">
               <img src="./img/photo_2022-12-28_10-51-36.jpg" alt="">
               <p>5000 com</p>
+              <p>super categoris</p>
               <a href="">Adobe After
                   Effects</a>
               </div>
@@ -43,6 +44,7 @@
             <div class="box">
               <img src="./img/photo_2022-12-28_10-51-36.jpg" alt="">
               <p>5000 com</p>
+              <p>super categoris</p>
               <a href="">Adobe After
                   Effects</a>
               </div>
@@ -52,6 +54,7 @@
             <div class="box">
               <img src="./img/photo_2022-12-28_10-51-36.jpg" alt="">
               <p>5000 com</p>
+              <p>super categoris</p>
               <a href="">Adobe After
                   Effects</a>
               </div>
