--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <div class="box">
                 <img src="./img/photo_2022-12-28_10-51-36.jpg" alt="">
                 <p>5000 com</p>
+                <p>super categoris</p>
                 <a href="">Adobe After
                     Effects</a>
             </div>
@@ -77,6 +78,7 @@
              <div class="box">
                     <img src="./img/photo_2022-12-28_10-51-36.jpg" alt="">
                     <p>5000 com</p>
+                    <p>super categoris</p>
                     <a href="">Adobe After
                         Effects</a>
             </div>
@@ -84,6 +86,7 @@
              <div class="box">
                         <img src="./img/photo_2022-12-28_10-51-36.jpg" alt="">
                         <p>5000 com</p>
+                        <p>super categoris</p>
                         <a href="">Adobe After
                             Effects</a>
                </div>
@@ -92,6 +95,7 @@
               <div class="box">
                             <img src="./img/photo_2022-12-28_10-51-36.jpg" alt="">
                             <p>5000 com</p>
+                            <p>super categoris</p>
                             <a href="">Adobe After
                                 Effects</a>          
              </div>
